# tokamak-equilibria

./: Cargo.toml  README.md
src/: bfield.rs  current.rs  equilibrium.rs  error.rs  lib.rs  qfactor.rs  tokamak.rs
src/bfield/: lar.rs  mod.rs  numerical.rs
src/current/: lar.rs  mod.rs  numerical.rs
src/efield/: mod.rs  nofield.rs
src/qfactor/: mod.rs  numerical.rs  parabolic.rs  unity.rs
