[package]
name = "tokamak-equilibria"
authors = ["George Tsiamasiotis"]
version = "0.1.1"
edition = "2024"
keywords = ["tokamak", "fusion", "magnetic field"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/George-Tsiamasiotis/tokamak-equilibria/"
description = "Representations of Tokamak equilibria for use in scientific calculations."

[dependencies]
is_close = "0.1.3"
ndarray = "0.16.1"
rsl-interpolation = "0.1.11"
thiserror = "2.0.16"
tokamak-netcdf = { git = "https://github.com/George-Tsiamasiotis/tokamak-netcdf", version = "0.1.2" }

[features]
default = ["rsl-interpolation/openblas-system"]
openblas-static = ["rsl-interpolation/openblas-static"]
openblas-system = ["rsl-interpolation/openblas-system"]
static_netcdf = ["tokamak-netcdf/static"]

[package.metadata.docs.rs]
features = ["static"]
